# Hugin-Mail

./: .gitignore  AGENTS.md  MAP.md  README.md  pyproject.toml
src/huginmail/: __init__.py  audit.py  classify.py  cli.py  compare.py  config.py  confirm.py  confirm_tui.py  export.py  hints.py  llm.py  log.py  models.py  organize.py  organize_imap.py  report.py  review.py  review_tui.py  rules.py  store.py  summary.py  sync.py  sync_imap.py  taxonomy.py  tokens.py
src/huginmail/prompts/: __init__.py  classify_v1.txt
src/huginmail/taxonomies/: __init__.py  v1.yaml
tests/: conftest.py  test_audit_export.py  test_classify.py  test_cli.py  test_compare.py  test_concurrency.py  test_config.py  test_confirm.py  test_confirm_tui.py  test_confirm_ux.py  test_llm.py  test_llm_first.py  test_organize.py  test_progress.py  test_rationale.py  test_report.py  test_review.py  test_rules.py  test_store.py  test_sync.py  test_taxonomy.py
