[project]
name = "hugin-mail"
version = "0.1.0"
description = "Local-first email triage with local LLMs (read-only v1)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Paul-Glad Mihai" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "polars>=1.0",
    "imap-tools>=1.6",
    "pyyaml>=6.0",
    "keyring>=25.0",
    "textual>=0.60",
    "openai>=1.30",
]

[project.scripts]
hugin = "huginmail.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/huginmail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
